--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ buildscript {
 
 group = 'com.ofg'
 description = 'Contains examples of stubs for the stub-runner'
-version = '0.0.5-SNAPSHOT'
+version = '0.0.5'
 
 repositories {
     mavenLocal()
